--- a/myStyle.css
+++ b/myStyle.css
@@ -814,7 +814,7 @@ section.project {
 /* ------------------------------------------ Bardot Intro -------------------------------------------------------- */
 
 #prj-bardot .prj-hero_img {
-	background-image: url("./Assets/Bardot_HomeMockup");
+	background-image: url("./Assets/Bardot_HomeMockup.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 100%;
