--- a/myStyle.css
+++ b/myStyle.css
@@ -894,12 +894,8 @@ section.project {
 
 @media screen and (max-width: 780px) {
 
-	.project .prj-hero_img {
-		width: 100%;
-		height: 40%;
-	}
-	.project-description {
-		height: auto;
+	.project {
+		height: 100vh;
 	}
 
 	section.flex-row {
@@ -928,12 +924,12 @@ section.project {
 
 @media screen and (max-width: 480px) {
 	section.project {
-/*		flex-flow: column;*/
+		flex-flow: column;
 		overflow-y: auto;
 	}
-		/*.project .prj-hero_img {
+		.project .prj-hero_img {
 			width: 100%;
-		}*/
+		}
 		.project-description {
 			width: 100%;
 			height: auto;
