--- a/cvStyle.css
+++ b/cvStyle.css
@@ -1,6 +1,6 @@
 html, body {
   font-size: 100%;
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   color: white;
   color: #0C1826;
   width: 100vw;
@@ -24,7 +24,7 @@ html, body {
 }
 
 h1 {
-	font-family: 'Lilita One', cursive;
+	font-family: 'Playfair Display', serif;
 	font-size: calc(1.8em + 1.8vw);
 	letter-spacing: 0.06em;
 	line-height: 1.5em;
@@ -37,10 +37,10 @@ h1 {
 }
 
 h2 {
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Titillium Web', sans-serif;
 	font-size: 1.8em;
-	letter-spacing: .05em;
-	font-weight: 800;
+/*	letter-spacing: .05em;*/
+	font-weight: 900;
 	line-height: 1.6em;
 }
 
@@ -52,7 +52,7 @@ h3 {
 	font-size: 1.25em;
 	letter-spacing: .1em;
 	line-height: 1.5em;
-	font-weight: 800;
+	font-weight: 900;
 	text-transform: uppercase;
 }
 
@@ -60,21 +60,21 @@ h4 {
 	font-size: 1em;
 	letter-spacing: .1rem;
 	line-height: 2rem;
-	font-weight: 700;
+	font-weight: 800;
 	text-transform: uppercase;
 }
 
 h5 {
 	font-size: 1em;
-	font-weight: 800;
-  letter-spacing: .1em;
+	font-weight: 600;
+  letter-spacing: .05em;
 }
 
 p {
 	font-size: 1.125em;
-	letter-spacing: .06em;
+	letter-spacing: .03em;
 	line-height: 1.6em;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 a {
@@ -90,14 +90,6 @@ a:hover {
 	text-decoration: underline;
 }
 
-
-h4 {
-	font-size: 1em;
-	letter-spacing: .1rem;
-	line-height: 2rem;
-	font-weight: 800;
-	text-transform: uppercase;
-}
 
 .block h4 {
 	text-align: left;
