--- a/projectStyle.css
+++ b/projectStyle.css
@@ -1442,6 +1442,10 @@ footer {
 	background-position: center 30%;
 }
 
+#heineken_onboarding_img {
+	width: 50%;
+}
+
 section#heineken-challenge {
 	background-color: #017C28;
 }
