FIXED scrolling problems!

--- a/myStyle.css
+++ b/myStyle.css
@@ -755,9 +755,9 @@ section.project {
 
 /* ----------------------------------- Customised contents ----------------------------------------- */
 
-.in-out-el {
+/*.in-out-el {
 	visibility: hidden;
-}
+}*/
 
 
 /* ----------------------------------------Intro Section--------------------------------------------- */
