--- a/myStyle.css
+++ b/myStyle.css
@@ -12,7 +12,7 @@ html,
 body {
 	font-size: 100%;
 	font-family: 'Titillium Web', sans-serif;
-	color: #0C1826;
+	color: #556B87;
 	height: auto;
 	width: 100vw;
 	margin: 0;
@@ -71,8 +71,10 @@ body {
 		.bar3 {
 			width: 2px;
 			position: absolute;
-			background-color: #8C9BAF;
-}
+			background-color: #556B87;
+			box-shadow: 0px 3px 4px rgba(255, 255, 255, 0.3),
+				          0px 3px 4px rgba(0, 0, 0, 0.3);
+	}
 
 	.menu 
 		.bar1,
@@ -83,6 +85,13 @@ body {
 		.menu .bar2 {
 			height: 37px;
 		}
+			.menu:hover {
+				scale: 1.1;
+			}
+			.menu:active {
+				opacity: .5;
+				scale: .9;
+			}
 
 .closeMenu {
 	position: absolute;
@@ -92,8 +101,9 @@ body {
 	cursor: pointer;
 	width: 32px;
 	height: 32px;
-	background-color: rgba(255, 255, 255, .8);
+	background-color: rgba(85, 107, 135, .7);
 	border-radius: 4px;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, .4);
 	-webkit-transition: .2s;
 	-o-transition: .2s;
 	transition: .2s;
@@ -103,7 +113,7 @@ body {
 .closeBar2 {
 	width: 24px;
 	height: 2px;
-	background-color: #0e83ea;
+	background-color: #E7EBEE;
 	position: absolute;
 	-webkit-transition: .2s;
 	-o-transition: .2s;
@@ -111,12 +121,19 @@ body {
 }
 
 .closeMenu:hover {
-	background-color: rgba(255, 255, 255, 1);
+	background-color: rgba(9, 9, 9, 1);
+	box-shadow: 2px 4px 12px rgba(0, 0, 0, .6);
+	scale: 1.1;
 }
+	.closeMenu:active {
+		background-color: rgba(9, 9, 9, .7);
+		box-shadow: 0px 2px 6px rgba(0, 0, 0, .4);
+		scale: 1;
+	}
 
 .closeMenu:hover .closeBar1,
 .closeMenu:hover .closeBar2 {
-	background-color: #F3425E;
+	background-color: #f3425e;
 }
 
 .background {
@@ -240,12 +257,12 @@ body {
 }
 
 .overlay .menu-items ul li a {
-	color: white;
+	color: #556B87;
 	text-decoration: none;
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 700;
 	font-size: calc(2rem + .7vw);
-/*	letter-spacing: .14rem;*/
+	letter-spacing: .14rem;
 	position: relative;
 	-webkit-transition: .7s;
 	-o-transition: .7s;
@@ -542,7 +559,7 @@ h1 {
 h2 {
 	font-family: 'Titillium Web', sans-serif;
 	font-size: calc(1.8em + 2vw);
-/*	letter-spacing: .03em;*/
+	letter-spacing: .03em;
 	font-weight: 900;
 	line-height: 1.2em;
 }
@@ -557,6 +574,7 @@ h3 {
 	line-height: 1.5em;
 	font-weight: 200;
 	text-transform: uppercase;
+	color: #556B87;
 }
 
 h5 {
@@ -684,7 +702,7 @@ section.project {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	background-color: white;
+	background-color: #E7EBEE;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -708,7 +726,7 @@ section.project {
 	height: 100vh;
 	position: absolute;
 	top: 0; left: 0;
-	background-color: #e0dfdf;
+	background-color: #E7EBEE;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -732,7 +750,7 @@ section.project {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	background-color: white;
+	background-color: #E7EBEE;
 	z-index: 1000;
 }
 
@@ -794,7 +812,7 @@ section.project {
 		letter-spacing: 1em;
 		line-height: 1.5em;
 		text-transform: uppercase;
-		color: #3B4A65;
+		color: #556B87;
 	}
 
 #home-CTAarrow {
@@ -872,6 +890,10 @@ section.project {
 
 /* ------------------------------------------ More works & About section -------------------------------------------------------- */
 
+#more-works {
+	background-color: white;
+}
+
 	.big-link {
 		max-width: 90%;
 		text-align: center;
@@ -911,6 +933,7 @@ section.project {
 				height: auto;
 				max-height: 150px;
 				margin: 2%;
+				visibility: hidden;
 			}
 
 
