--- a/myStyle.css
+++ b/myStyle.css
@@ -86,8 +86,8 @@ body {
 			width: 2px;
 			position: absolute;
 			background-color: #556B87;
-			box-shadow: 0px 3px 4px rgba(255, 255, 255, 0.3),
-				          0px 3px 4px rgba(0, 0, 0, 0.3);
+			/*box-shadow: 0px 3px 4px rgba(255, 255, 255, 0.3),
+				          0px 3px 4px rgba(0, 0, 0, 0.3);*/
 	}
 
 	.menu 
