--- a/projectStyle.css
+++ b/projectStyle.css
@@ -44,7 +44,7 @@ body {
 .bar3 {
 	width: 2px;
 	position: absolute;
-	background-color: #2B334F;
+	background-color: #556B87;
 }
 
 .menu .bar1,
@@ -64,7 +64,7 @@ body {
 	cursor: pointer;
 	width: 32px;
 	height: 32px;
-	background-color: rgba(255, 255, 255, .8);
+	background-color: rgba(85, 107, 135, .7);
 	border-radius: 4px;
 	-webkit-transition: .2s;
 	-o-transition: .2s;
@@ -75,7 +75,7 @@ body {
 .closeBar2 {
 	width: 24px;
 	height: 2px;
-	background-color: #0e83ea;
+	background-color: #E7EBEE;
 	position: absolute;
 	-webkit-transition: .2s;
 	-o-transition: .2s;
@@ -83,12 +83,19 @@ body {
 }
 
 .closeMenu:hover {
-	background-color: rgba(255, 255, 255, 1);
+	background-color: rgba(9, 9, 9, 1);
+	box-shadow: 2px 4px 12px rgba(0, 0, 0, .6);
+	scale: 1.1;
 }
+	.closeMenu:active {
+		background-color: rgba(9, 9, 9, .7);
+		box-shadow: 0px 2px 6px rgba(0, 0, 0, .4);
+		scale: 1;
+	}
 
 .closeMenu:hover .closeBar1,
 .closeMenu:hover .closeBar2 {
-	background-color: #F3425E;
+	background-color: #f3425e;
 }
 
 
@@ -106,7 +113,7 @@ body {
 	z-index: 10001;
 	bottom: 0;
 	overflow-x: hidden;
-	background-color: #2A2F36;
+	background-color: #01060F;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
