--- a/projectStyle.css
+++ b/projectStyle.css
@@ -1421,7 +1421,7 @@ footer {
 				margin: 25px;
 			}
 
-			.tile-desc {
+			.tile-desc, .tile_static {
 				width: 100%; height: 100%;
 				display: -webkit-inline-box;
 				display: -ms-inline-flexbox;
@@ -1438,6 +1438,7 @@ footer {
 				        justify-content: center;
 				text-align: center;
 			}
+
 
 #all-works h2,
 #all-works div {
@@ -1555,7 +1556,12 @@ section#rr-challenge {
 }
 
 
+/*---------------------------------------------- Portfolio -------------------------------------------*/
 
+#tile_Portfolio {
+	background-image: linear-gradient(rgba(255, 255, 255, .99), rgba(255, 255, 255, 0.85)), url("./Assets/Whales_Tile_Bg.png");
+	background-size: contain;
+}
 
 
 
